@@ -137,7 +137,9 @@ strptime(x, format, tz = "")
       when a time zone has changed abbreviations over the years.}
   }
   Where leading zeros are shown they will be used on output but are
-  optional on input.
+  optional on input.  Names are matched case-insensitively on input:
+  whether they are capitalized on output depends on the platform and the
+  locale.
 
   When \code{\%z} or \code{\%Z} is used for output with an
   object with an assigned time zone an attempt is made to use the values
