@@ -268,7 +268,6 @@ w_strptime_internal (wchar_t *rp, const wchar_t *fmt, struct tm *tm,
 	    /* Match the `%' character itself.  */
 	    match_char (L'%', *rp++);
 	    break;
-	case L'a':
 	case L'A':
 	    /* Match day of week.  */
 #if defined(HAVE_WCSFTIME)
@@ -277,11 +276,53 @@ w_strptime_internal (wchar_t *rp, const wchar_t *fmt, struct tm *tm,
 	    for (cnt = 0; cnt < 7; ++cnt)
 	    {
 		if (*decided != loc
-		    && (w_match_string (w_weekday_name[cnt], rp)
-			|| w_match_string (w_ab_weekday_name[cnt], rp)))
+		    && w_match_string (w_weekday_name[cnt], rp))
 		{
 		    *decided = raw;
 		    break;
+		}
+	    }
+	    if (cnt == 7) {
+		for (cnt = 0; cnt < 7; ++cnt)
+		{
+		    if (*decided != loc
+			&& w_match_string (w_ab_weekday_name[cnt], rp))
+		    {
+			*decided = raw;
+			break;
+		    }
+		}
+	    }
+		
+	    if (cnt == 7)
+		/* Does not match a weekday name.  */
+		return NULL;
+	    tm->tm_wday = cnt;
+	    have_wday = 1;
+	    break;
+	case L'a':
+	    /* Match day of week.  */
+#if defined(HAVE_WCSFTIME)
+	    if(!locale_w_strings_set) get_locale_w_strings();
+#endif
+	    for (cnt = 0; cnt < 7; ++cnt)
+	    {
+		if (*decided != loc
+		    && w_match_string (w_ab_weekday_name[cnt], rp))
+		{
+		    *decided = raw;
+		    break;
+		}
+	    }
+	    if (cnt == 7) {
+		for (cnt = 0; cnt < 7; ++cnt)
+		{
+		    if (*decided != loc
+			&& w_match_string (w_weekday_name[cnt], rp))
+		    {
+			*decided = raw;
+			break;
+		    }
 		}
 	    }
 	    if (cnt == 7)
@@ -290,20 +331,59 @@ w_strptime_internal (wchar_t *rp, const wchar_t *fmt, struct tm *tm,
 	    tm->tm_wday = cnt;
 	    have_wday = 1;
 	    break;
-	case L'b':
 	case L'B':
-	case L'h':
 	    /* Match month name.  */
 #if defined(HAVE_WCSFTIME)
 	    if(!locale_w_strings_set) get_locale_w_strings();
 #endif
 	    for (cnt = 0; cnt < 12; ++cnt)
 	    {
-		if (w_match_string (w_month_name[cnt], rp)
-		    || w_match_string (w_ab_month_name[cnt], rp))
+		if (w_match_string (w_month_name[cnt], rp))
 		{
 		    *decided = raw;
 		    break;
+		}
+	    }
+	    if (cnt == 12) {
+		/* Try abbreviated names */
+		for (cnt = 0; cnt < 12; ++cnt)
+		{
+		    if (w_match_string (w_ab_month_name[cnt], rp))
+		    {
+			*decided = raw;
+			break;
+		    }
+		}
+	    }
+	    if (cnt == 12) 
+		/* Does not match a month name.  */
+		return NULL;
+	    tm->tm_mon = cnt;
+	    want_xday = 1;
+	    break;
+	case L'b':
+	case L'h':
+	    /* Match abbreviated month name.  */
+#if defined(HAVE_WCSFTIME)
+	    if(!locale_w_strings_set) get_locale_w_strings();
+#endif
+	    for (cnt = 0; cnt < 12; ++cnt)
+	    {
+		if (w_match_string (w_ab_month_name[cnt], rp))
+		{
+		    *decided = raw;
+		    break;
+		}
+	    }
+	    if (cnt == 12) {
+		/* Try full names */
+		for (cnt = 0; cnt < 12; ++cnt)
+		{
+		    if (w_match_string (w_month_name[cnt], rp))
+		    {
+			*decided = raw;
+			break;
+		    }
 		}
 	    }
 	    if (cnt == 12)
@@ -740,18 +820,27 @@ strptime_internal (const char *rp, const char *fmt, struct tm *tm,
 	    /* Match the `%' character itself.  */
 	    match_char ('%', *rp++);
 	    break;
-	case 'a':
 	case 'A':
 	    /* Match day of week.  */
 	    if(!locale_strings_set) get_locale_strings();
 	    for (cnt = 0; cnt < 7; ++cnt)
 	    {
 		if (*decided != loc
-		    && (match_string (weekday_name[cnt], rp)
-			|| match_string (ab_weekday_name[cnt], rp)))
+		    && match_string (weekday_name[cnt], rp))
 		{
 		    *decided = raw;
 		    break;
+		}
+	    }
+	    if (cnt == 7) {
+		for (cnt = 0; cnt < 7; ++cnt)
+		{
+		    if (*decided != loc
+			&& match_string (ab_weekday_name[cnt], rp))
+		    {
+			*decided = raw;
+			break;
+		    }
 		}
 	    }
 	    if (cnt == 7)
@@ -760,18 +849,84 @@ strptime_internal (const char *rp, const char *fmt, struct tm *tm,
 	    tm->tm_wday = cnt;
 	    have_wday = 1;
 	    break;
-	case 'b':
+	case 'a':
+	    /* Match day of week.  */
+	    if(!locale_strings_set) get_locale_strings();
+	    for (cnt = 0; cnt < 7; ++cnt)
+	    {
+		if (*decided != loc
+		    && match_string (ab_weekday_name[cnt], rp))
+		{
+		    *decided = raw;
+		    break;
+		}
+	    }
+	    if (cnt == 7) {
+		for (cnt = 0; cnt < 7; ++cnt)
+		{
+		    if (*decided != loc
+			&& match_string (weekday_name[cnt], rp))
+		    {
+			*decided = raw;
+			break;
+		    }
+		}
+	    }
+	    if (cnt == 7)
+		/* Does not match a weekday name.  */
+		return NULL;
+	    tm->tm_wday = cnt;
+	    have_wday = 1;
+	    break;
 	case 'B':
+	    /* Match month name.  */
+	    if(!locale_strings_set) get_locale_strings();
+	    for (cnt = 0; cnt < 12; ++cnt)
+	    {
+		if (match_string (month_name[cnt], rp))
+		{
+		    *decided = raw;
+		    break;
+		}
+	    }
+	    if (cnt == 12) {
+		/* Try abbreviated names */
+		for (cnt = 0; cnt < 12; ++cnt)
+		{
+		    if (match_string (ab_month_name[cnt], rp))
+		    {
+			*decided = raw;
+			break;
+		    }
+		}
+	    }
+	    if (cnt == 12)
+		/* Does not match a month name.  */
+		return NULL;
+	    tm->tm_mon = cnt;
+	    want_xday = 1;
+	    break;
+	case 'b':
 	case 'h':
 	    /* Match month name.  */
 	    if(!locale_strings_set) get_locale_strings();
 	    for (cnt = 0; cnt < 12; ++cnt)
 	    {
-		if (match_string (month_name[cnt], rp)
-		    || match_string (ab_month_name[cnt], rp))
+		if (match_string (ab_month_name[cnt], rp))
 		{
 		    *decided = raw;
 		    break;
+		}
+	    }
+	    if (cnt == 12) {
+		/* Try full names */
+		for (cnt = 0; cnt < 12; ++cnt)
+		{
+		    if (match_string (month_name[cnt], rp))
+		    {
+			*decided = raw;
+			break;
+		    }
 		}
 	    }
 	    if (cnt == 12)
